<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinev50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineh20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@id/guidelineh50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ac"
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineh20"
        app:layout_constraintEnd_toEndOf="@+id/guidelinev50"
        app:layout_constraintStart_toStartOf="@id/guidelinev50"
        app:layout_constraintTop_toTopOf="@+id/guidelineh20" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/guidelineh50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineh50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_container"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:gravity="center"
                android:padding="@dimen/small_padding"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:id="@+id/login_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="center"
                android:id="@+id/info"
                android:text="@string/please_login_with_your_email_amp_password"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/style_textinputelayout"
                android:id="@+id/ti_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/style_edittext"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/style_textinputelayout"
                android:layout_marginBottom="10dp"
                android:id="@+id/ti_password"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/style_edittext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/style_button"
                android:text="@string/login" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:textSize="18sp"
        android:id="@+id/social_media_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/social_media_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/google"/>


    <ImageView
        android:contentDescription="@string/google_button"
        android:id="@+id/google"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/large_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dont_have_account" />

    <TextView
        android:textSize="18sp"
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>