<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/large_padding"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/create_business">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/create_new_business"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/large_text_size"/>

            <TextView
                android:id="@+id/business_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:text="@string/enter_your_business_info"
                android:gravity="center"
                android:textStyle="italic"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_info"
                android:hint="@string/business_name"
                style="@style/MyTextInputLayoutStyle"
                android:id="@+id/ti_business_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/et_business_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_business_name"
                android:hint="@string/business_desc"
                android:id="@+id/ti_business_desc"
                style="@style/MyTextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/et_business_desc"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/medium_padding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_business_desc"
                android:hint="@string/business_location"
                android:id="@+id/ti_business_address"
                style="@style/MyTextInputLayoutStyle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:id="@+id/et_business_address"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_business_address"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/back"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_back"
                android:layout_marginTop="@dimen/medium_padding"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_business_address"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/create"
                android:textColor="@color/colorAccent"
                android:id="@+id/btn_create"
                android:layout_marginTop="@dimen/medium_padding"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>